--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
         <color name="button_color">#A8ABAB</color>
         <color name="black">#FF000000</color>
         <color name="white">#FFFFFFFF</color>
-        <color name="gray">#DFDFED</color>
+        <color name="gray">#B1B1B1</color>
         <color name="light_gray">#EEEEF4</color>
 
 </resources>
