--- a/app/src/main/res/drawable/ic_sound.xml
+++ b/app/src/main/res/drawable/ic_sound.xml
@@ -1,5 +1,18 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:height="24dp" android:tint="#000000" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M12,3v10.55c-0.59,-0.34 -1.27,-0.55 -2,-0.55 -2.21,0 -4,1.79 -4,4s1.79,4 4,4 4,-1.79 4,-4V7h4V3h-6z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="25dp"
+    android:viewportWidth="24"
+    android:viewportHeight="25">
+  <path
+      android:pathData="M16.274,8.516C15.961,8.077 15.368,7.989 14.951,8.318C14.533,8.647 14.449,9.27 14.763,9.708C15.237,10.371 15.518,11.194 15.518,12.089C15.518,12.984 15.237,13.807 14.763,14.471C14.449,14.909 14.533,15.531 14.951,15.861C15.368,16.19 15.961,16.101 16.274,15.663C16.986,14.668 17.408,13.429 17.408,12.089C17.408,10.75 16.986,9.511 16.274,8.516Z"
+      android:fillColor="#B1B1B1"/>
+  <path
+      android:pathData="M18.563,7.084C19.565,8.561 20.967,12.529 18.563,16.581"
+      android:strokeWidth="2"
+      android:fillColor="#00000000"
+      android:strokeColor="#B1B1B1"
+      android:strokeLineCap="round"/>
+  <path
+      android:pathData="M7.003,7.923H5.001C3.896,7.923 3,8.812 3,9.908V13.878C3,14.974 3.896,15.863 5.001,15.863H7.003L11.366,19.469C12.018,20.008 13.007,19.548 13.007,18.707V5.079C13.007,4.238 12.018,3.778 11.366,4.317L7.003,7.923Z"
+      android:fillColor="#B1B1B1"/>
 </vector>
