--- a/app/src/main/res/layout/item_setting_switch.xml
+++ b/app/src/main/res/layout/item_setting_switch.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:padding="12dp"
     android:gravity="center_vertical"
@@ -12,6 +12,7 @@
         android:id="@+id/imgIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
+
         android:src="@drawable/ic_vibration" />
 
     <LinearLayout
@@ -25,7 +26,7 @@
             android:id="@+id/settingTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Vibration"
+            android:text="@string/vibration"
             android:textStyle="bold"
             android:textColor="@color/black" />
 
@@ -33,7 +34,7 @@
             android:id="@+id/settingSubtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Turn On / Off Mobile Vibration"
+            android:text="@string/turn_on_off_mobile_vibration"
             android:textSize="12sp"
             android:textColor="@color/gray" />
     </LinearLayout>
