--- a/app/src/main/res/layout/item_settings.xml
+++ b/app/src/main/res/layout/item_settings.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/light_gray">
+    android:background="@color/light_gray"
+    android:scrollbars="none">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,7 +28,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="General"
+            android:text="@string/general"
             android:paddingStart="8dp"
             android:textStyle="bold"
             android:textColor="@color/button_color"
@@ -45,6 +46,7 @@
             app:cardCornerRadius="8dp">
 
             <LinearLayout
+                android:id="@+id/layoutLanguage"
                 android:padding="14dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -52,13 +54,16 @@
                 android:gravity="center_vertical">
 
                 <TextView
+                    android:id="@+id/languageTextView"
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:text="Language"
+                    android:textStyle="bold"
+                    android:paddingStart="3dp"
                     android:drawableStart="@drawable/ic_language"
-                    android:drawablePadding="5dp"
-                    android:textSize="16sp"
+                    android:drawablePadding="10dp"
+                    android:textSize="15sp"
                     android:textColor="@color/black" />
 
                 <TextView
@@ -79,68 +84,71 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Settings"
+            android:text="@string/settings"
             android:paddingStart="8dp"
             android:textStyle="bold"
             android:textColor="@color/button_color"
             android:layout_marginBottom="8dp" />
 
         <!-- Settings Section -->
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/white"
-            android:padding="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="24dp">
+            android:layout_marginBottom="24dp"
+            android:background="@color/white"
+            app:cardElevation="2dp"
+            app:cardCornerRadius="8dp">
 
-            <!-- Individual Setting Items with IDs -->
-            <include
-                android:id="@+id/vibrationSetting"
-                layout="@layout/item_setting_switch" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="8dp">
 
-            <include
-                android:id="@+id/soundSetting"
-                layout="@layout/item_setting_switch" />
+                <include
+                    android:id="@+id/vibrationSetting"
+                    layout="@layout/item_setting_switch"/>
 
-            <include
-                android:id="@+id/autoCopySetting"
-                layout="@layout/item_setting_switch" />
+                <include
+                    android:id="@+id/soundSetting"
+                    layout="@layout/item_setting_switch" />
 
-            <include
-                android:id="@+id/autoWebSetting"
-                layout="@layout/item_setting_switch" />
+                <include
+                    android:id="@+id/autoCopySetting"
+                    layout="@layout/item_setting_switch" />
 
-            <include
-                android:id="@+id/saveHistorySetting"
-                layout="@layout/item_setting_switch" />
-        </LinearLayout>
+                <include
+                    android:id="@+id/autoWebSetting"
+                    layout="@layout/item_setting_switch" />
+
+                <include
+                    android:id="@+id/saveHistorySetting"
+                    layout="@layout/item_setting_switch" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
 
         <!-- Others Section -->
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Others"
-            android:textStyle="bold"
-            android:paddingStart="8dp"
-            android:textColor="@color/button_color"
-            android:layout_marginBottom="8dp" />
-
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:background="@color/white"
-            android:padding="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="8dp"
+            android:background="@color/white"
+            app:cardElevation="2dp"
+            app:cardCornerRadius="8dp">
 
-            <!-- Others Items -->
-            <include layout="@layout/item_setting_arrow" />
-        </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="8dp">
+
+                <include layout="@layout/item_setting_arrow"/>
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </LinearLayout>
 </ScrollView>
