--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:backgroundTint="@color/light_gray"
     android:padding="16dp">
 
 
@@ -35,8 +36,8 @@
             android:layout_height="wrap_content"
             android:text="Social Media"
             android:layout_marginStart="12dp"
-            android:backgroundTint="@color/button_color"
-            android:textColor="@android:color/white"/>
+            android:backgroundTint="@color/gray"
+            android:textColor="@color/white"/>
     </LinearLayout>
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
