--- a/app/src/main/res/layout/fragment_created_q_r.xml
+++ b/app/src/main/res/layout/fragment_created_q_r.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/qrContainer"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -127,7 +128,7 @@
                 android:layout_width="218dp"
                 android:layout_height="218dp"
                 android:layout_marginTop="12dp"
-                android:backgroundTint="@color/gray"
+                android:background="@color/light_gray"
                 app:layout_constraintBottom_toTopOf="@+id/layoutActions"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
