--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray"
+    android:background="@color/light_gray"
     tools:context=".ui.fragments.dashboard.main.main.MainFragment">
 
     <!-- ViewPager2 replaces FrameLayout -->
@@ -13,6 +13,7 @@
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:backgroundTint="@color/light_gray"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/bottomAppBar"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,6 +40,7 @@
             app:itemTextColor="@color/nav_item_color"
             app:labelVisibilityMode="labeled"
             app:menu="@menu/bottom_menu"
+            android:background="@color/white"
             tools:layout_editor_absoluteX="16dp" />
     </com.google.android.material.bottomappbar.BottomAppBar>
 
