--- a/app/src/main/res/layout/fragment_s_m_s.xml
+++ b/app/src/main/res/layout/fragment_s_m_s.xml
@@ -3,13 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="0dp"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/gray"
+        android:background="@color/white"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:title="SMS"
         app:titleTextColor="@android:color/black"
