--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
         <color name="purple_500">#FF6200EE</color>
         <color name="purple_700">#FF3700B3</color>
         <color name="green_200">#0DBA76</color>
-        <color name="button_color">#A8ABAB</color>
+        <color name="button_color">#C7CCCC</color>
         <color name="black">#FF000000</color>
         <color name="white">#FFFFFFFF</color>
         <color name="gray">#B1B1B1</color>
