resolve minor issues

--- a/app/src/main/res/layout/dialog_scan_tips.xml
+++ b/app/src/main/res/layout/dialog_scan_tips.xml
@@ -12,7 +12,7 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:src="@drawable/ic_scan_tips"
-        android:contentDescription="Scan Icon"
+        android:contentDescription="@string/scan_icon"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -21,7 +21,7 @@
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Scanning Tips"
+        android:text="@string/scanning_tips"
         android:textSize="20sp"
         android:textStyle="bold"
         android:textColor="@color/black"
@@ -35,7 +35,7 @@
         android:id="@+id/tvMessage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="• Avoid strong light or shadows\n• Hold your phone steady\n• Don’t tilt or rotate"
+        android:text="@string/avoid_strong_light_or_shadows_n_hold_your_phone_steady_n_don_t_tilt_or_rotate"
         android:textSize="16sp"
         android:textColor="@color/black"
         android:layout_marginTop="12dp"
@@ -51,7 +51,7 @@
         android:layout_height="41dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="@color/green_200"
-        android:text="Got it"
+        android:text="@string/got_it"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
