--- a/app/src/main/res/layout/fragment_cell_phone.xml
+++ b/app/src/main/res/layout/fragment_cell_phone.xml
@@ -36,7 +36,7 @@
             android:id="@+id/etContactNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Phone Number"
+            android:hint="@string/phone_number"
             android:inputType="phone" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -44,14 +44,15 @@
         android:id="@+id/btnCreate"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="524dp"
-        android:layout_marginEnd="16dp"
         android:alpha="0.5"
         android:backgroundTint="@color/green_200"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
         android:enabled="false"
-        android:text="CREATE"
+        android:text="@string/create_cell"
         android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
