--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -41,7 +41,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Title Name"
+                android:hint="@string/title_name"
                 app:boxStrokeColor="@color/green_200"
                 app:boxBackgroundMode="outline"
                 android:paddingTop="5dp"
@@ -58,7 +58,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:hint="Start date/ time"
+                android:hint="@string/start_date_time"
                 app:endIconDrawable="@drawable/ic_calendar"
                 app:endIconMode="custom"
                 app:boxBackgroundMode="outline"
@@ -77,7 +77,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:hint="End date/ time"
+                android:hint="@string/end_date_time"
                 app:endIconDrawable="@drawable/ic_calendar"
                 app:endIconMode="custom"
                 app:boxBackgroundMode="outline"
@@ -96,7 +96,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
-                android:hint="Please enter content"
+                android:hint="@string/please_enter_content"
                 app:boxBackgroundMode="outline"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
@@ -119,17 +119,15 @@
         android:layout_margin="16dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/green_200"
-        android:text="CREATE"
+        android:text="@string/create"
         android:alpha="0.5"
         android:enabled="false"
         android:textAllCaps="true"
-        android:padding="16dp"
         android:textColor="@android:color/white"
         app:cornerRadius="40dp"
         app:iconPadding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
