--- a/app/src/main/res/layout/fragment_item_code.xml
+++ b/app/src/main/res/layout/fragment_item_code.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginTop="8dp"
-        android:hint="Product Code"
+        android:hint="@string/product_code"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="@color/green_200"
         app:counterEnabled="true"
@@ -59,7 +59,7 @@
         android:layout_margin="20dp"
         android:layout_marginBottom="16dp"
         android:backgroundTint="@color/green_200"
-        android:text="CREATE"
+        android:text="@string/create_product"
         android:alpha="0.5"
         android:enabled="false"
         android:textAllCaps="true"
