--- a/app/src/main/res/layout/fragment_my_card.xml
+++ b/app/src/main/res/layout/fragment_my_card.xml
@@ -20,119 +20,130 @@
         app:navigationIcon="@drawable/ic_back" />
 
     <!-- Scrollable Form Fields -->
+
+    <!-- Create Button -->
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toTopOf="@+id/btnCreate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:divider="?android:attr/dividerVertical"
             android:orientation="vertical"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
-            android:divider="?android:attr/dividerVertical"
             android:showDividers="middle">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="My Name">
+                android:hint="@string/my_name">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etMyName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"/>
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Phone number"
-                >
+                android:hint="@string/cell_number">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etMyPhone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="phone"/>
+                    android:inputType="phone" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Email">
+                android:hint="@string/email_address_card">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etMyEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"/>
+                    android:inputType="textEmailAddress" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Address">
+                android:hint="@string/address">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etMyAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"/>
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Birthday">
+                android:hint="@string/birthday">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etMyBirthday"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="date"/>
+                    android:inputType="date" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Organization">
+                android:hint="@string/organization">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etMyOrg"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textWebEditText"/>
+                    android:inputType="textWebEditText" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Please enter content">
+                android:hint="@string/please_enter_content_card">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/etMyNote"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="text"/>
+                    android:inputType="text" />
             </com.google.android.material.textfield.TextInputLayout>
 
         </LinearLayout>
     </ScrollView>
 
-    <!-- Create Button -->
     <Button
         android:id="@+id/btnCreate"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_margin="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/green_200"
-        android:text="CREATE"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="4dp"
         android:alpha="0.5"
+        android:backgroundTint="@color/green_200"
         android:enabled="false"
+        android:text="CREATE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
