--- a/app/src/main/res/layout/fragment_q_r_result.xml
+++ b/app/src/main/res/layout/fragment_q_r_result.xml
@@ -32,7 +32,7 @@
         android:gravity="center"
         android:backgroundTintMode="add"
         android:padding="12dp"
-        android:hint="Result goes here"
+        android:hint="@string/result_goes_here"
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -46,7 +46,7 @@
         android:layout_height="200dp"
         android:layout_marginTop="64dp"
         android:backgroundTint="@color/gray"
-        android:contentDescription="Scanned QR Code"
+        android:contentDescription="@string/scanned_qr_code"
         android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -60,7 +60,7 @@
         android:layout_marginStart="66dp"
         android:layout_marginTop="88dp"
         android:backgroundTint="@color/green_200"
-        android:text="Save"
+        android:text="@string/saveqrscaned"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@id/btn_share"
@@ -76,7 +76,7 @@
         android:layout_marginTop="88dp"
         android:layout_marginEnd="66dp"
         android:backgroundTint="@color/green_200"
-        android:text="Share"
+        android:text="@string/share_qrscanned"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
