--- a/app/src/main/res/layout/fragment_s_m_s.xml
+++ b/app/src/main/res/layout/fragment_s_m_s.xml
@@ -34,7 +34,7 @@
             android:id="@+id/etSmsNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Phone number"
+            android:hint="@string/phone_no"
             android:inputType="phone"
             android:padding="16dp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:gravity="top"
-            android:hint="Please enter your message"
+            android:hint="@string/please_enter_your_message"
             android:inputType="textMultiLine"
             android:padding="16dp" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -64,14 +64,15 @@
         android:id="@+id/btnCreate"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
         android:layout_marginTop="376dp"
+        android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:backgroundTint="@color/green_200"
-        android:text="CREATE"
         android:alpha="0.5"
+        android:backgroundTint="@color/green_200"
         android:enabled="false"
+        android:text="@string/create_sms"
         android:textColor="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
