--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -25,7 +25,7 @@
             android:layout_marginStart="12dp"
             android:layout_marginTop="12dp"
             android:layout_marginBottom="2dp"
-            android:text="App Setting"
+            android:text="@string/app_setting"
             android:textColor="@color/green_200"
             android:textSize="14sp"
             android:textStyle="bold" />
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="8dp"
-            android:text="Others"
+            android:text="@string/others_new"
             android:textColor="@color/green_200"
             android:textSize="14sp"
             android:textStyle="bold" />
