--- a/app/src/main/res/layout/fragment_style.xml
+++ b/app/src/main/res/layout/fragment_style.xml
@@ -16,40 +16,23 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:text="QR Creator"
+        android:text="@string/qr_creator_style"
         android:textSize="40sp"
         android:textStyle="bold" />
 
-    <LinearLayout
-        android:id="@+id/layoutTabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/tvQrType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <ImageView
+        android:id="@+id/imgQrCode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
-        <Button
-            android:id="@+id/btnStyleFb"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="8dp"
-            android:text="Facebook" />
-
-        <Button
-            android:id="@+id/btnStyleWifi"
-            android:layout_width="82dp"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="8dp"
-            android:text="Wi-Fi" />
-
-        <Button
-            android:id="@+id/btnStyleEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email"
-            android:backgroundTint="@color/green_200"
-            android:textColor="@android:color/white" />
-
-
-    </LinearLayout>
+</LinearLayout>
 
     <!-- RecyclerView for Saved QR Items -->
     <androidx.recyclerview.widget.RecyclerView
@@ -61,4 +44,5 @@
         android:clipToPadding="false"
         android:paddingBottom="80dp"
         app:spanCount="3" />
+
 </LinearLayout>
