--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:layout_marginTop="8dp"
-        android:hint="Enter Your Content"
+        android:hint="@string/enter_your_text_content"
         app:boxBackgroundMode="outline"
         app:boxStrokeColor="@color/green_200"
         app:counterEnabled="true"
@@ -58,15 +58,17 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/green_200"
-        android:text="CREATE"
         android:alpha="0.5"
-        android:enabled="false"
-        android:textAllCaps="true"
+        android:backgroundTint="@color/green_200"
         android:drawableStart="@drawable/ic_scan_round"
+        android:enabled="false"
+        android:text="@string/create_text"
+        android:textAllCaps="true"
         android:textColor="@android:color/white"
         app:cornerRadius="40dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/messageInputLayout"
+        app:layout_constraintVertical_bias="1.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
