--- a/app/src/main/res/layout/fragment_twitter.xml
+++ b/app/src/main/res/layout/fragment_twitter.xml
@@ -28,7 +28,7 @@
         android:layout_margin="16dp"
         android:backgroundTint="@color/green_200"
         android:padding="12dp"
-        android:text="CREATE"
+        android:text="@string/create_twitter"
         android:alpha="0.5"
         android:enabled="false"
         android:textColor="@android:color/white"
@@ -53,7 +53,7 @@
             android:id="@+id/etTwitter"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="URL"
+            android:hint="@string/twitter_url"
             android:inputType="textWebEditText" />
     </com.google.android.material.textfield.TextInputLayout>
 
