--- a/app/src/main/res/layout/fragment_viber.xml
+++ b/app/src/main/res/layout/fragment_viber.xml
@@ -36,7 +36,7 @@
             android:id="@+id/etViber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="92+ "
+            android:hint="@string/_92"
             android:inputType="phone" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -47,7 +47,7 @@
         android:layout_margin="16dp"
         android:layout_marginTop="596dp"
         android:backgroundTint="@color/green_200"
-        android:text="CREATE"
+        android:text="@string/create_viber"
         android:alpha="0.5"
         android:enabled="false"
         android:textColor="@android:color/white"
