--- a/app/src/main/res/layout/fragment_whatsapp.xml
+++ b/app/src/main/res/layout/fragment_whatsapp.xml
@@ -36,7 +36,7 @@
             android:id="@+id/etWhatsapp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="92+ "
+            android:hint="@string/_923"
             android:inputType="phone" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -46,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:backgroundTint="@color/green_200"
-        android:text="CREATE"
+        android:text="@string/create_whatsapp"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         android:alpha="0.5"
